--- a/content/cloud-docs/run/modes-and-options.mdx
+++ b/content/cloud-docs/run/modes-and-options.mdx
@@ -47,6 +47,22 @@ The [replace option](/cli/commands/plan#replace-address) instructs Terraform to 
 - **CLI:** Use `terraform plan -replace=ADDRESS` or `terraform apply -replace=ADDRESS`.
 - **API:** Use the `replace-addrs` option.
 
+## Allow Empty Apply
+
+A no-operation (empty) apply enables Terraform Cloud to apply a run from a plan that contains no infrastructure changes. During apply, Terraform can upgrade the state version if required. You can use this option to upgrade the state in your Terraform Cloud workspace to a new Terraform version.
+
+~> **Warning:** Terraform Cloud cannot guarantee that a plan in this mode will produce no changes. We recommend checking the plan for drift before proceeding to the apply stage.
+
+- **API:** Set the `allow-empty-apply` field to `true`.
+- **UI:** Use the "Start new plan" action from a workspace's "Actions" menu, then select the "Allow empty apply" option in the new plan dialog.
+
+## Plan Only/Speculative Plan
+
+The Plan Only option creates a plan that Terraform cannot apply. Plan Only runs are also known as [Speculative plans](/cloud-docs/run#speculative-plans). They show a set of possible changes and check them against Sentinel policies, but those changes cannot be applied. You can use it to test a specific Terraform version that may differ from the workspace version. This lets you check whether your configuration is compatible with a newer terraform version without changing the workspace settings.
+
+- **API:** Set the `plan-only` field to `true` and specify an available terraform version using the `terraform-version` field.
+- **UI:** Open the workspace's **Actions** menu, select **Start new plan**, and then choose **Plan only** as the run type.
+
 ## Targeted Plan and Apply
 
 -> **Version note:** Targeting support is available in Terraform Enterprise v202006-1 or later.
