--- a/content/cloud-docs/run/ui.mdx
+++ b/content/cloud-docs/run/ui.mdx
@@ -63,6 +63,15 @@ If you would rather automatically apply plans that don't have errors, you can [e
 
 To help you review proposed changes, Terraform Cloud can automatically run [speculative plans][speculative plan] for pull requests or merge requests.
 
+## Testing Terraform Upgrades with Speculative Plans
+
+Using the UI, you can start a new speculative plan with the workspace's current configuration version and any Terraform version available to the organization.
+
+1. Click **Start New Run** and see the **Start a new run** modal window.
+2. Select the **Plan only** option as the run type. This run mode reveals a new option to choose the specific Terraform version.
+3. Visit the workspace settings and change the [workspace terraform version](/cloud-docs/workspaces/settings#terraform-version) setting.
+4. Start a new run using the procedure above but this time select the type **Allow empty apply**. Creating a run in **Allow empty apply** mode allows Terraform to apply a plan containing no infrastructure changes. During an empty apply, Terraform upgrades the state file format to match the Terraform version, if required. This is particularly useful for upgrading between Terraform versions in your workspace. Once this run is applied, the state version upgrade will be complete.
+
 ### Viewing Pull Request Plans
 
 Speculative plans don't appear in a workspace's list of normal runs. Instead, Terraform Cloud adds a link to the run in the pull request itself, along with an indicator of the run's status.
